src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__short_startup_diagnostics_prompt_spacing.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 31
expression: contents
---
│    | THNDRS                                                                       # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#37f499 bg=#171928 b]=THNDRS [bg=#171928]=                                                                    [bg=#171928]=  
│    | cwd ~/Projects/StormlightLabs/OpenSource/thndrs                              # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=cwd ~/Projects/StormlightLabs/OpenSource/thndrs [bg=#171928]=                           [bg=#171928]=  
│    |      provider  umans                 context  AGENTS.md                      # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=     provider  umans            [fg=#abb4da bg=#171928]=    [fg=#abb4da bg=#171928]=   context  AGENTS.md [bg=#171928]=                   [bg=#171928]=  
│    |                                      skill diagnostic                        # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=                                [fg=#abb4da bg=#171928]=    [fg=#abb4da bg=#171928]=   skill diagnostic [bg=#171928]=                     [bg=#171928]=  
│    |   loaded                             /Users/test/.thndrs/skills/bad/SKILL    # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#ebfafa bg=#171928 b]=  loaded                        [fg=#abb4da bg=#171928]=    [fg=#abb4da bg=#171928]=   /Users/test/.thndrs/skills/bad/SKILL [bg=#171928]=  
│    |                                      invalid YAML frontmatter                # [bg=#171928]=   [fg=#3b4261 bg=#171928]= |  [fg=#abb4da bg=#171928]=                                [fg=#abb4da bg=#171928]=    [fg=#abb4da bg=#171928]=   invalid YAML frontmatter [bg=#171928]=             [bg=#171928]=  
│   ... 17 rows hidden                                                              # [bg=#171928]=   [fg=#abb4da bg=#171928]=... 17 rows hidden [bg=#171928]=                                                           [bg=#171928]=  
│                                                                                   # [bg=#212337]=                                                                                
│    test-session  · idle                                                           # [bg=#212337]=   [bg=#212337]=  [fg=#37f499 bg=#212337 b]=test-session [bg=#212337]=   [fg=#3b4261 bg=#212337]=· idle [bg=#212337]=                                                        [bg=#212337]=  
│    ›                                                                              # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [bg=#212337]=                                                                         [bg=#212337]=  
│    model: test-model   search: native   tok: ↑0 ↓0   git: main clean              # [bg=#212337]=   [bg=#212337]=  [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=    [fg=#abb4da bg=#212337]=search: native [bg=#212337]=    [fg=#e0e0e0 bg=#212337]=tok: ↑0 ↓0 [bg=#212337]=    [fg=#37f499 bg=#212337]=git: main clean [bg=#212337]=           [bg=#212337]=  
│                                                                                   # [bg=#212337]=
